--- a/view.html
+++ b/view.html
@@ -1,12 +1,11 @@
 <link rel="stylesheet" href="styles.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="./BasicUserService.js"></script>
-<div id="store" class="store"></div>
-<div id="resultTitle" class="resultTitle" onclick="bus.dropdown()"></div>
-<div id="userManagement" class="userManagement">
-    <div id="result" class="result"></div>
-    <div id="resultXml" class="resultXml"></div>
-    <div id="userListView" class="userListView"></div>
+<div id="user_store" class="user_store"></div>
+<div id="user_resultUser" class="user_resultUser" onclick="bus.dropdown()"></div>
+<div id="user_userManagement" class="user_userManagement">
+    <div id="user_result" class="user_result"></div>
+    <div id="user_userListView" class="user_userListView"></div>
 </div>
 <script>
     let bus = {};
